--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
+    "email-validator": "^2.0.4",
+    "nativescript-loading-indicator": "^2.5.2",
+    "nativescript-plugin-firebase": "^9.1.1",
     "nativescript-theme-core": "~1.0.6",
     "nativescript-vue": "~2.4.0",
     "tns-core-modules": "~6.0.0"
