--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "nativescript": {
     "id": "org.nativescript.fittedforesight",
-    "tns-android": {
+    "tns-ios": {
       "version": "6.0.2"
     },
-    "tns-ios": {
+    "tns-android": {
       "version": "6.0.2"
     }
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "email-validator": "^2.0.4",
     "nativescript-loading-indicator": "^2.5.2",
+    "nativescript-plugin-firebase": "^9.1.1",
     "nativescript-theme-core": "~1.0.6",
     "nativescript-vue": "~2.4.0",
     "tns-core-modules": "~6.0.0"
